Switch task queue to huey (#41)

--- a/examples/python_api/python_api.ipynb
+++ b/examples/python_api/python_api.ipynb
@@ -3,22 +3,6 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "e675a59d-f656-41f9-828a-912fd0e176ea",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def _is_notebook():\n",
-    "    try:\n",
-    "        from IPython import get_ipython\n",
-    "\n",
-    "        return \"IPKernelApp\" in get_ipython().config\n",
-    "    except Exception:\n",
-    "        return False"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
    "id": "3d1b9f01-ae07-488e-b3d2-62d01ad828c9",
    "metadata": {},
    "outputs": [],
@@ -30,17 +14,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "a3e91c88-13ca-417e-8205-9ef3b16f0d7d",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'0.1.dev16+ga4d3603.d20230914143851'"
+       "'0.1.dev21+g7f8ec2d.d20230925071852'"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -53,17 +37,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "5a3759a6-ffb0-47f7-be40-cf9d62fc67da",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "Config(state_database_url='sqlite://', queue_database_url='redis://127.0.0.1:6379', ragna_api_url='http://127.0.0.1:31476', ragna_ui_url='http://127.0.0.1:31477', local_cache_root=PosixPath('/home/philip/.cache/ragna'), document_class=<class 'ragna.core.LocalDocument'>, upload_token_secret='9e6020416528a671c3057800c6ce4452b6f77e9b29f62647fa9a8fb855065f54', upload_token_ttl=30, registered_source_storage_classes={'Ragna/DemoSourceStorage': <class 'ragna.source_storage._demo.RagnaDemoSourceStorage'>}, registered_assistant_classes={'Ragna/DemoAssistant': <class 'ragna.assistant._demo.RagnaDemoAssistant'>})"
+       "Config(state_database_url='sqlite://', queue_database_url=None, ragna_api_url='http://127.0.0.1:31476', ragna_ui_url='http://127.0.0.1:31477', local_cache_root=PosixPath('/home/philip/.cache/ragna'), document_class=<class 'ragna.core.LocalDocument'>, upload_token_secret='166cf986bee3b9b771e05344a260703d68876602e261ddc29cdfda4911a3a6b2', upload_token_ttl=30, registered_source_storage_classes={'Ragna/DemoSourceStorage': <class 'ragna.source_storage._demo.RagnaDemoSourceStorage'>}, registered_assistant_classes={'Ragna/DemoAssistant': <class 'ragna.assistant._demo.RagnaDemoAssistant'>})"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -76,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "id": "87613cac-44ba-4b85-ad3e-a1127dd65aa5",
    "metadata": {},
    "outputs": [],
@@ -89,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "id": "818ff37c-d693-44b2-9d56-104eb2d86f59",
    "metadata": {},
    "outputs": [
@@ -97,8 +81,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{\"event\": \"Started ragna worker\", \"timestamp\": \"2023-09-20T19:14:01.928952Z\", \"level\": \"info\"}\n",
-      "Ragna is an open-source RAG orchestration app. It is designed to help users create and manage RAG (Red, Amber, Green) status reports. Ragna allows users to easily track and communicate the status of various projects or tasks using a simple color-coded system. It provides a user-friendly interface for creating and updating RAG reports, as well as generating visualizations and reports based on the data entered. Ragna is built on open-source technologies and is available for free to use and customize.\n"
+      "I just pretend to be an LLM. I can't actually help with your prompt:\n",
+      "\n",
+      "> What is Ragna?\n",
+      "\n",
+      "I was given the following sources:\n",
+      "\n",
+      "- demo_document.txt: Ragna is an open-source RAG orchestration app\n"
      ]
     }
    ],
@@ -116,7 +105,7 @@
     "async with await rag.new_chat(\n",
     "    documents=[document_path],\n",
     "    source_storage=RagnaDemoSourceStorage,\n",
-    "    assistant=OpenaiGpt35Turbo16kAssistant,\n",
+    "    assistant=RagnaDemoAssistant,\n",
     ") as chat:\n",
     "    prompt = \"What is Ragna?\"\n",
     "    answer = await chat.answer(prompt)\n",
@@ -126,7 +115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "id": "4c2f04c8-a0e1-47fc-a900-bc03b91088a2",
    "metadata": {},
    "outputs": [
@@ -134,8 +123,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{('Chroma', 'OpenAI/gpt-3.5-turbo-16k'): <coroutine object answer_prompt at 0x7f151a0e7240>,\n",
-      " ('Chroma', 'OpenAI/gpt-4'): <coroutine object answer_prompt at 0x7f151a0e7440>}\n"
+      "{('Chroma', 'OpenAI/gpt-3.5-turbo-16k'): <coroutine object answer_prompt at 0x7f6402ae4640>,\n",
+      " ('Chroma', 'OpenAI/gpt-4'): <coroutine object answer_prompt at 0x7f6402ae4840>}\n"
      ]
     }
    ],
@@ -170,7 +159,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "id": "d125a99d-51c2-4008-b49b-0c648abdb9e0",
    "metadata": {},
    "outputs": [
