--- a/examples/rest_api/rest_api.ipynb
+++ b/examples/rest_api/rest_api.ipynb
@@ -41,20 +41,20 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "INFO:     Started server process [31511]\n",
-      "INFO:     Waiting for application startup.\n",
-      "INFO:     Application startup complete.\n",
-      "INFO:     Uvicorn running on http://127.0.0.1:31476 (Press CTRL+C to quit)\n"
-     ]
-    },
-    {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "INFO:     127.0.0.1:44626 - \"GET /health HTTP/1.1\" 200 OK\n"
+      "INFO:     127.0.0.1:42394 - \"GET /health HTTP/1.1\" 200 OK\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "INFO:     Started server process [39690]\n",
+      "INFO:     Waiting for application startup.\n",
+      "INFO:     Application startup complete.\n",
+      "INFO:     Uvicorn running on http://127.0.0.1:31476 (Press CTRL+C to quit)\n"
      ]
     }
    ],
@@ -137,7 +137,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "INFO:     127.0.0.1:44626 - \"GET /chats?user=Ragna HTTP/1.1\" 200 OK\n",
+      "INFO:     127.0.0.1:42394 - \"GET /chats?user=Ragna HTTP/1.1\" 200 OK\n",
       "[]\n"
      ]
     }
@@ -167,7 +167,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "INFO:     127.0.0.1:44626 - \"GET /components?user=Ragna HTTP/1.1\" 200 OK\n",
+      "INFO:     127.0.0.1:42394 - \"GET /components?user=Ragna HTTP/1.1\" 200 OK\n",
       "{'assistants': ['Ragna/DemoAssistant'],\n",
       " 'source_storages': ['Ragna/DemoSourceStorage']}\n"
      ]
@@ -229,20 +229,18 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "INFO:     127.0.0.1:44626 - \"GET /document/new?user=Ragna&name=document0.txt HTTP/1.1\" 200 OK\n",
-      "{'data': {'token': 'eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJ1c2VyIjoiUmFnbmEiLCJpZCI6IjAzN2I4YzQyLWEyM2QtNGU1Yy04ZDI4LTM3MGI1YzRhYTU0YyIsImV4cCI6MTY5NTg0NDQ0Ny4yMjMxOTEzfQ.HG4dX6cCTdmsjQ8Y1jd8srM2BBq3bZ4aJHuWjIXX8As'},\n",
-      " 'document': {'id': '037b8c42-a23d-4e5c-8d28-370b5c4aa54c',\n",
+      "INFO:     127.0.0.1:42394 - \"GET /document?user=Ragna&name=document0.txt HTTP/1.1\" 200 OK\n",
+      "{'data': {'token': 'eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJ1c2VyIjoiUmFnbmEiLCJpZCI6ImRiZjdiOWE2LWEzMGItNGEyNS1iNGJhLTE3ODIwNjNhYzJhZiIsImV4cCI6MTY5NjQ1NTg2MS40MjkwMjE0fQ.gjMsP0qZ36hO9fAOFPxeKom-oYsyIyxggG82oP0svoc'},\n",
+      " 'document': {'id': 'dbf7b9a6-a30b-4a25-b4ba-1782063ac2af',\n",
       "              'name': 'document0.txt'},\n",
-      " 'url': 'http://127.0.0.1:31476/document/upload'}\n"
+      " 'url': 'http://127.0.0.1:31476/document'}\n"
      ]
     }
    ],
    "source": [
     "path = paths[0]\n",
     "\n",
-    "response = await client.get(\n",
-    "    f\"{URL}/document/new\", params={\"user\": USER, \"name\": path.name}\n",
-    ")\n",
+    "response = await client.get(f\"{URL}/document\", params={\"user\": USER, \"name\": path.name})\n",
     "document_info = response.json()\n",
     "document = document_info[\"document\"]\n",
     "pprint(document_info)"
@@ -266,7 +264,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "INFO:     127.0.0.1:44626 - \"POST /document/upload HTTP/1.1\" 200 OK\n"
+      "INFO:     127.0.0.1:42394 - \"POST /document HTTP/1.1\" 200 OK\n"
      ]
     }
    ],
@@ -297,18 +295,18 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "INFO:     127.0.0.1:44626 - \"GET /document/new?user=Ragna&name=document1.txt HTTP/1.1\" 200 OK\n",
-      "INFO:     127.0.0.1:44626 - \"POST /document/upload HTTP/1.1\" 200 OK\n",
-      "INFO:     127.0.0.1:44626 - \"GET /document/new?user=Ragna&name=document2.txt HTTP/1.1\" 200 OK\n",
-      "INFO:     127.0.0.1:44626 - \"POST /document/upload HTTP/1.1\" 200 OK\n"
+      "INFO:     127.0.0.1:42394 - \"GET /document?user=Ragna&name=document1.txt HTTP/1.1\" 200 OK\n",
+      "INFO:     127.0.0.1:42394 - \"POST /document HTTP/1.1\" 200 OK\n",
+      "INFO:     127.0.0.1:42394 - \"GET /document?user=Ragna&name=document2.txt HTTP/1.1\" 200 OK\n",
+      "INFO:     127.0.0.1:42394 - \"POST /document HTTP/1.1\" 200 OK\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "[{'id': '037b8c42-a23d-4e5c-8d28-370b5c4aa54c', 'name': 'document0.txt'},\n",
-       " {'id': 'e2f22925-3142-408c-8839-6930636ad114', 'name': 'document1.txt'},\n",
-       " {'id': '64406367-26a2-4df5-ad6b-635d769edbf4', 'name': 'document2.txt'}]"
+       "[{'id': 'dbf7b9a6-a30b-4a25-b4ba-1782063ac2af', 'name': 'document0.txt'},\n",
+       " {'id': '5c54ded3-67ae-4dd4-8829-190e09b2f3e3', 'name': 'document1.txt'},\n",
+       " {'id': '1ae72430-bde4-42a3-b623-4aadd234bc04', 'name': 'document2.txt'}]"
       ]
      },
      "execution_count": 9,
@@ -321,9 +319,7 @@
     "\n",
     "for path in paths[1:]:\n",
     "    document_info = (\n",
-    "        await client.get(\n",
-    "            f\"{URL}/document/new\", params={\"user\": USER, \"name\": path.name}\n",
-    "        )\n",
+    "        await client.get(f\"{URL}/document\", params={\"user\": USER, \"name\": path.name})\n",
     "    ).json()\n",
     "    documents.append(document_info[\"document\"])\n",
     "    await client.post(\n",
@@ -353,14 +349,17 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "INFO:     127.0.0.1:44626 - \"POST /chat/new?user=Ragna HTTP/1.1\" 200 OK\n",
+      "INFO:     127.0.0.1:42394 - \"POST /chats?user=Ragna HTTP/1.1\" 200 OK\n",
       "{'closed': False,\n",
-      " 'id': 'b9c58be3-296a-46d8-88ad-7f942fcb2845',\n",
+      " 'id': 'f68e3999-444c-4a92-8d25-0f80dd3b2219',\n",
       " 'messages': [],\n",
       " 'metadata': {'assistant': 'Ragna/DemoAssistant',\n",
-      "              'document_ids': ['037b8c42-a23d-4e5c-8d28-370b5c4aa54c',\n",
-      "                               'e2f22925-3142-408c-8839-6930636ad114',\n",
-      "                               '64406367-26a2-4df5-ad6b-635d769edbf4'],\n",
+      "              'documents': [{'id': 'dbf7b9a6-a30b-4a25-b4ba-1782063ac2af',\n",
+      "                             'name': 'document0.txt'},\n",
+      "                            {'id': '5c54ded3-67ae-4dd4-8829-190e09b2f3e3',\n",
+      "                             'name': 'document1.txt'},\n",
+      "                            {'id': '1ae72430-bde4-42a3-b623-4aadd234bc04',\n",
+      "                             'name': 'document2.txt'}],\n",
       "              'name': 'Ragna REST API example',\n",
       "              'params': {},\n",
       "              'source_storage': 'Ragna/DemoSourceStorage'},\n",
@@ -370,13 +369,14 @@
    ],
    "source": [
     "response = await client.post(\n",
-    "    f\"{URL}/chat/new\",\n",
+    "    f\"{URL}/chats\",\n",
     "    params={\"user\": USER},\n",
     "    json={\n",
     "        \"name\": \"Ragna REST API example\",\n",
     "        \"document_ids\": [d[\"id\"] for d in documents],\n",
     "        \"source_storage\": SOURCE_STORAGE,\n",
     "        \"assistant\": ASSISTANT,\n",
+    "        \"params\": {},\n",
     "    },\n",
     ")\n",
     "chat = response.json()\n",
@@ -401,17 +401,21 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "INFO:     127.0.0.1:44626 - \"POST /chat/b9c58be3-296a-46d8-88ad-7f942fcb2845/start?user=Ragna HTTP/1.1\" 200 OK\n",
+      "INFO:     127.0.0.1:42394 - \"POST /chats/f68e3999-444c-4a92-8d25-0f80dd3b2219/start?user=Ragna HTTP/1.1\" 200 OK\n",
       "{'closed': False,\n",
-      " 'id': 'b9c58be3-296a-46d8-88ad-7f942fcb2845',\n",
+      " 'id': 'f68e3999-444c-4a92-8d25-0f80dd3b2219',\n",
       " 'messages': [{'content': 'How can I help you with the documents?',\n",
-      "               'id': '0c8635ca-1471-427e-a121-09ee18c7cc9e',\n",
+      "               'id': '09df1d1c-3c8f-4d42-ad68-fa8a4d833d85',\n",
       "               'role': 'system',\n",
-      "               'sources': []}],\n",
+      "               'sources': [],\n",
+      "               'timestamp': '2023-10-04T21:43:51.941124'}],\n",
       " 'metadata': {'assistant': 'Ragna/DemoAssistant',\n",
-      "              'document_ids': ['037b8c42-a23d-4e5c-8d28-370b5c4aa54c',\n",
-      "                               '64406367-26a2-4df5-ad6b-635d769edbf4',\n",
-      "                               'e2f22925-3142-408c-8839-6930636ad114'],\n",
+      "              'documents': [{'id': '1ae72430-bde4-42a3-b623-4aadd234bc04',\n",
+      "                             'name': 'document2.txt'},\n",
+      "                            {'id': '5c54ded3-67ae-4dd4-8829-190e09b2f3e3',\n",
+      "                             'name': 'document1.txt'},\n",
+      "                            {'id': 'dbf7b9a6-a30b-4a25-b4ba-1782063ac2af',\n",
+      "                             'name': 'document0.txt'}],\n",
       "              'name': 'Ragna REST API example',\n",
       "              'params': {},\n",
       "              'source_storage': 'Ragna/DemoSourceStorage'},\n",
@@ -422,7 +426,7 @@
    "source": [
     "CHAT_ID = chat[\"id\"]\n",
     "\n",
-    "response = await client.post(f\"{URL}/chat/{CHAT_ID}/start\", params={\"user\": USER})\n",
+    "response = await client.post(f\"{URL}/chats/{CHAT_ID}/start\", params={\"user\": USER})\n",
     "chat = response.json()\n",
     "pprint(chat)"
    ]
@@ -445,43 +449,46 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "INFO:     127.0.0.1:44626 - \"POST /chat/b9c58be3-296a-46d8-88ad-7f942fcb2845/answer?user=Ragna&prompt=What%20is%20Ragna%3F HTTP/1.1\" 200 OK\n",
-      "{'content': \"I just pretend to be an LLM. I can't actually help with your \"\n",
-      "            'prompt:\\n'\n",
+      "INFO:     127.0.0.1:42394 - \"POST /chats/f68e3999-444c-4a92-8d25-0f80dd3b2219/answer?user=Ragna&prompt=What%20is%20Ragna%3F HTTP/1.1\" 200 OK\n",
+      "{'content': \"I can't really help you with your prompt:\\n\"\n",
       "            '\\n'\n",
       "            '> What is Ragna?\\n'\n",
       "            '\\n'\n",
-      "            'I was given the following sources:\\n'\n",
+      "            'I can at least show you the sources that I was given:\\n'\n",
       "            '\\n'\n",
-      "            '- document0.txt: This is content of document 0\\n'\n",
       "            '- document2.txt: This is content of document 2\\n'\n",
-      "            '- document1.txt: This is content of document 1',\n",
-      " 'id': '2eddee29-14bb-4e85-8041-9ab47e1925ab',\n",
+      "            '- document1.txt: This is content of document 1\\n'\n",
+      "            '- document0.txt: This is content of document 0',\n",
+      " 'id': '822615fa-c05c-4b03-8d25-60b8687ba568',\n",
       " 'role': 'assistant',\n",
-      " 'sources': [{'document_id': '037b8c42-a23d-4e5c-8d28-370b5c4aa54c',\n",
-      "              'document_name': 'document0.txt',\n",
+      " 'sources': [{'document': {'id': '1ae72430-bde4-42a3-b623-4aadd234bc04',\n",
+      "                           'name': 'document2.txt'},\n",
+      "              'id': '6bfba599-7fdd-4a36-8f43-c1cb552f83eb',\n",
       "              'location': ''},\n",
-      "             {'document_id': '64406367-26a2-4df5-ad6b-635d769edbf4',\n",
-      "              'document_name': 'document2.txt',\n",
+      "             {'document': {'id': '5c54ded3-67ae-4dd4-8829-190e09b2f3e3',\n",
+      "                           'name': 'document1.txt'},\n",
+      "              'id': 'e7ebeac9-891b-4867-b35b-62d571a50837',\n",
       "              'location': ''},\n",
-      "             {'document_id': 'e2f22925-3142-408c-8839-6930636ad114',\n",
-      "              'document_name': 'document1.txt',\n",
-      "              'location': ''}]}\n",
-      "I just pretend to be an LLM. I can't actually help with your prompt:\n",
+      "             {'document': {'id': 'dbf7b9a6-a30b-4a25-b4ba-1782063ac2af',\n",
+      "                           'name': 'document0.txt'},\n",
+      "              'id': '37b9a731-032c-4bd6-9286-3693b1149952',\n",
+      "              'location': ''}],\n",
+      " 'timestamp': '2023-10-04T21:43:51.953583'}\n",
+      "I can't really help you with your prompt:\n",
       "\n",
       "> What is Ragna?\n",
       "\n",
-      "I was given the following sources:\n",
+      "I can at least show you the sources that I was given:\n",
       "\n",
-      "- document0.txt: This is content of document 0\n",
       "- document2.txt: This is content of document 2\n",
-      "- document1.txt: This is content of document 1\n"
+      "- document1.txt: This is content of document 1\n",
+      "- document0.txt: This is content of document 0\n"
      ]
     }
    ],
    "source": [
     "response = await client.post(\n",
-    "    f\"{URL}/chat/{CHAT_ID}/answer\", params={\"user\": USER, \"prompt\": \"What is Ragna?\"}\n",
+    "    f\"{URL}/chats/{CHAT_ID}/answer\", params={\"user\": USER, \"prompt\": \"What is Ragna?\"}\n",
     ")\n",
     "answer = response.json()\n",
     "pprint(answer[\"message\"])\n",
@@ -506,42 +513,51 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "INFO:     127.0.0.1:44626 - \"POST /chat/b9c58be3-296a-46d8-88ad-7f942fcb2845/close?user=Ragna HTTP/1.1\" 200 OK\n",
+      "INFO:     127.0.0.1:42394 - \"POST /chats/f68e3999-444c-4a92-8d25-0f80dd3b2219/close?user=Ragna HTTP/1.1\" 200 OK\n",
       "{'closed': True,\n",
-      " 'id': 'b9c58be3-296a-46d8-88ad-7f942fcb2845',\n",
+      " 'id': 'f68e3999-444c-4a92-8d25-0f80dd3b2219',\n",
       " 'messages': [{'content': 'How can I help you with the documents?',\n",
-      "               'id': '0c8635ca-1471-427e-a121-09ee18c7cc9e',\n",
+      "               'id': '09df1d1c-3c8f-4d42-ad68-fa8a4d833d85',\n",
       "               'role': 'system',\n",
-      "               'sources': []},\n",
+      "               'sources': [],\n",
+      "               'timestamp': '2023-10-04T21:43:51.941124'},\n",
       "              {'content': 'What is Ragna?',\n",
-      "               'id': '1ef18ae3-754e-45c3-8536-9ac7d35eb1ea',\n",
+      "               'id': '362e63d9-16d6-4c0e-a3d7-26cab7ddd980',\n",
       "               'role': 'user',\n",
-      "               'sources': []},\n",
-      "              {'content': \"I just pretend to be an LLM. I can't actually help \"\n",
-      "                          'with your prompt:\\n'\n",
+      "               'sources': [],\n",
+      "               'timestamp': '2023-10-04T21:43:51.951584'},\n",
+      "              {'content': \"I can't really help you with your prompt:\\n\"\n",
       "                          '\\n'\n",
       "                          '> What is Ragna?\\n'\n",
       "                          '\\n'\n",
-      "                          'I was given the following sources:\\n'\n",
+      "                          'I can at least show you the sources that I was '\n",
+      "                          'given:\\n'\n",
       "                          '\\n'\n",
-      "                          '- document0.txt: This is content of document 0\\n'\n",
       "                          '- document2.txt: This is content of document 2\\n'\n",
-      "                          '- document1.txt: This is content of document 1',\n",
-      "               'id': '2eddee29-14bb-4e85-8041-9ab47e1925ab',\n",
+      "                          '- document1.txt: This is content of document 1\\n'\n",
+      "                          '- document0.txt: This is content of document 0',\n",
+      "               'id': '822615fa-c05c-4b03-8d25-60b8687ba568',\n",
       "               'role': 'assistant',\n",
-      "               'sources': [{'document_id': '037b8c42-a23d-4e5c-8d28-370b5c4aa54c',\n",
-      "                            'document_name': 'document0.txt',\n",
+      "               'sources': [{'document': {'id': '1ae72430-bde4-42a3-b623-4aadd234bc04',\n",
+      "                                         'name': 'document2.txt'},\n",
+      "                            'id': '6bfba599-7fdd-4a36-8f43-c1cb552f83eb',\n",
       "                            'location': ''},\n",
-      "                           {'document_id': '64406367-26a2-4df5-ad6b-635d769edbf4',\n",
-      "                            'document_name': 'document2.txt',\n",
+      "                           {'document': {'id': '5c54ded3-67ae-4dd4-8829-190e09b2f3e3',\n",
+      "                                         'name': 'document1.txt'},\n",
+      "                            'id': 'e7ebeac9-891b-4867-b35b-62d571a50837',\n",
       "                            'location': ''},\n",
-      "                           {'document_id': 'e2f22925-3142-408c-8839-6930636ad114',\n",
-      "                            'document_name': 'document1.txt',\n",
-      "                            'location': ''}]}],\n",
+      "                           {'document': {'id': 'dbf7b9a6-a30b-4a25-b4ba-1782063ac2af',\n",
+      "                                         'name': 'document0.txt'},\n",
+      "                            'id': '37b9a731-032c-4bd6-9286-3693b1149952',\n",
+      "                            'location': ''}],\n",
+      "               'timestamp': '2023-10-04T21:43:51.953583'}],\n",
       " 'metadata': {'assistant': 'Ragna/DemoAssistant',\n",
-      "              'document_ids': ['037b8c42-a23d-4e5c-8d28-370b5c4aa54c',\n",
-      "                               '64406367-26a2-4df5-ad6b-635d769edbf4',\n",
-      "                               'e2f22925-3142-408c-8839-6930636ad114'],\n",
+      "              'documents': [{'id': '1ae72430-bde4-42a3-b623-4aadd234bc04',\n",
+      "                             'name': 'document2.txt'},\n",
+      "                            {'id': '5c54ded3-67ae-4dd4-8829-190e09b2f3e3',\n",
+      "                             'name': 'document1.txt'},\n",
+      "                            {'id': 'dbf7b9a6-a30b-4a25-b4ba-1782063ac2af',\n",
+      "                             'name': 'document0.txt'}],\n",
       "              'name': 'Ragna REST API example',\n",
       "              'params': {},\n",
       "              'source_storage': 'Ragna/DemoSourceStorage'},\n",
@@ -550,7 +566,7 @@
     }
    ],
    "source": [
-    "response = await client.post(f\"{URL}/chat/{CHAT_ID}/close\", params={\"user\": USER})\n",
+    "response = await client.post(f\"{URL}/chats/{CHAT_ID}/close\", params={\"user\": USER})\n",
     "chat = response.json()\n",
     "pprint(chat)"
    ]
