fix component loading

--- a/examples/local_llm/local_llm.ipynb
+++ b/examples/local_llm/local_llm.ipynb
@@ -127,7 +127,7 @@
      "output_type": "stream",
      "text": [
       "User: What is Ragna?\n",
-      "Assistant: Ragna is an OSS app for RAG workflows that offers a Python and REST API as well as web UI.\n"
+      "Assistant: Ragna is an open-source application (OSS) for RAG workflows. It offers a Python and REST API as well as a web UI.\n"
      ]
     }
    ],
