--- a/examples/python_api/python_api.ipynb
+++ b/examples/python_api/python_api.ipynb
@@ -21,7 +21,7 @@
     {
      "data": {
       "text/plain": [
-       "'0.1.dev21+g7f8ec2d.d20230925071852'"
+       "'0.1.dev29+g03721c7.d20231009084220'"
       ]
      },
      "execution_count": 2,
@@ -44,7 +44,7 @@
     {
      "data": {
       "text/plain": [
-       "Config(local_cache_root=PosixPath('/home/philip/.cache/ragna'), state_database_url='sqlite://', queue_database_url='memory', ragna_api_url='http://127.0.0.1:31476', ragna_ui_url='http://127.0.0.1:31477', document_class=<class 'ragna.core.LocalDocument'>, upload_token_secret='245be1b4c5656eefec1ac16d4a856f189e9e35d35aa014eb7426573e5b86c03f', upload_token_ttl=30, registered_source_storage_classes={'Ragna/DemoSourceStorage': <class 'ragna.source_storage._demo.RagnaDemoSourceStorage'>}, registered_assistant_classes={'Ragna/DemoAssistant': <class 'ragna.assistant._demo.RagnaDemoAssistant'>})"
+       "Config(local_cache_root=PosixPath('/home/philip/.cache/ragna'), state_database_url='sqlite://', queue_database_url='memory', ragna_api_url='http://127.0.0.1:31476', ragna_ui_url='http://127.0.0.1:31477', document_class=<class 'ragna.core.LocalDocument'>, upload_token_secret='85d9cbd51c5ac58c33d966edf01280169391247f8643d6f4daa0f5195c184938', upload_token_ttl=30, registered_source_storage_classes={'Ragna/DemoSourceStorage': <class 'ragna.source_storage._demo.RagnaDemoSourceStorage'>}, registered_assistant_classes={'Ragna/DemoAssistant': <class 'ragna.assistant._demo.RagnaDemoAssistant'>})"
       ]
      },
      "execution_count": 3,
@@ -116,6 +116,30 @@
   {
    "cell_type": "code",
    "execution_count": 6,
+   "id": "db899f79-e97b-4a61-89e8-7579339ff929",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{ragna.source_storage._demo.RagnaDemoSourceStorage: Ragna/DemoSourceStorage,\n",
+       " ragna.assistant._demo.RagnaDemoAssistant: Ragna/DemoAssistant}"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from ragna.core._queue import _LOADED_COMPONENTS\n",
+    "\n",
+    "_LOADED_COMPONENTS"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
    "id": "4c2f04c8-a0e1-47fc-a900-bc03b91088a2",
    "metadata": {},
    "outputs": [
@@ -123,8 +147,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{('Chroma', 'OpenAI/gpt-3.5-turbo-16k'): <coroutine object answer_prompt at 0x7f73bfd15f40>,\n",
-      " ('Chroma', 'OpenAI/gpt-4'): <coroutine object answer_prompt at 0x7f740774a040>}\n"
+      "{('Chroma', 'OpenAI/gpt-3.5-turbo-16k'): <coroutine object answer_prompt at 0x7f120c115d40>,\n",
+      " ('Chroma', 'OpenAI/gpt-4'): <coroutine object answer_prompt at 0x7f120c115140>}\n"
      ]
     }
    ],
@@ -159,7 +183,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "id": "d125a99d-51c2-4008-b49b-0c648abdb9e0",
    "metadata": {},
    "outputs": [
